:white_check_mark: [#26] add filter tests
