# src/plan-openapi.yaml
@@ -227,6 +227,34 @@ paths:
         description: UUID's van de gekoppelde doeltypen.
         explode: false
         style: form
+      - in: query
+        name: einddatum
+        schema:
+          type: string
+          format: date-time
+        description: Einddatum van het doel.
+      - in: query
+        name: einddatum__gte
+        schema:
+          type: string
+          format: date-time
+        description: Einddatum van het doel.
+      - in: query
+        name: einddatum__lte
+        schema:
+          type: string
+          format: date-time
+        description: Einddatum van het doel.
+      - in: query
+        name: hoofdDoelUuid
+        schema:
+          type: array
+          items:
+            type: string
+            format: uuid
+        description: UUID's van de bovenliggende doelen.
+        explode: false
+        style: form
       - name: page
         required: false
         in: query
@@ -239,6 +267,89 @@ paths:
         description: 'Het aantal resultaten terug te geven per pagina. (default: 100).'
         schema:
           type: integer
+      - in: query
+        name: persoonUuid
+        schema:
+          type: array
+          items:
+            type: string
+            format: uuid
+        description: UUID's van de gekoppelde personen.
+        explode: false
+        style: form
+      - in: query
+        name: plannenUuids
+        schema:
+          type: array
+          items:
+            type: string
+            format: uuid
+        description: UUID's van de gekoppelde plannen.
+        explode: false
+        style: form
+      - in: query
+        name: resultaat
+        schema:
+          type: string
+          enum:
+          - behaald
+          - gefaald
+        description: |-
+          Resultaat van het doel.
+
+          * `behaald` - Behaald
+          * `gefaald` - Gefaald
+      - in: query
+        name: startdatum
+        schema:
+          type: string
+          format: date-time
+        description: Startdatum van het doel.
+      - in: query
+        name: startdatum__gte
+        schema:
+          type: string
+          format: date-time
+        description: Startdatum van het doel.
+      - in: query
+        name: startdatum__lte
+        schema:
+          type: string
+          format: date-time
+        description: Startdatum van het doel.
+      - in: query
+        name: status
+        schema:
+          type: string
+          enum:
+          - actief
+          - afgerond
+          - geannuleerd
+        description: |-
+          Status van het doel.
+
+          * `actief` - Actief
+          * `afgerond` - Afgerond
+          * `geannuleerd` - Geannuleerd
+      - in: query
+        name: status__in
+        schema:
+          type: array
+          items:
+            type: string
+        description: Meerdere waarden kunnen gescheiden worden door komma's.
+        explode: false
+        style: form
+      - in: query
+        name: titel
+        schema:
+          type: string
+        description: Titel van het doel.
+      - in: query
+        name: titel__icontains
+        schema:
+          type: string
+        description: Titel van het doel.
       tags:
       - Doel
       security:
@@ -1850,6 +1961,58 @@ paths:
       description: Deze lijst kan gefilterd wordt met query-string parameters.
       summary: Alle plannen opvragen.
       parameters:
+      - in: query
+        name: domeinregister
+        schema:
+          type: string
+        description: URN naar het domeinregister voor dit plan.
+      - in: query
+        name: einddatum
+        schema:
+          type: string
+          format: date-time
+        description: Einddatum van het plan.
+      - in: query
+        name: einddatum__gte
+        schema:
+          type: string
+          format: date-time
+        description: Einddatum van het plan.
+      - in: query
+        name: einddatum__lte
+        schema:
+          type: string
+          format: date-time
+        description: Einddatum van het plan.
+      - in: query
+        name: fase
+        schema:
+          type: string
+          enum:
+          - actief
+          - afgerond
+          - geannuleerd
+        description: |-
+          Fase van het plan.
+
+          * `actief` - Actief
+          * `afgerond` - Afgerond
+          * `geannuleerd` - Geannuleerd
+      - in: query
+        name: medewerker
+        schema:
+          type: string
+        description: URN naar de medewerker in het HR-systeem.
+      - in: query
+        name: overkoepelendPlanUuid
+        schema:
+          type: array
+          items:
+            type: string
+            format: uuid
+        description: UUID van het overkoepelend plan.
+        explode: false
+        style: form
       - name: page
         required: false
         in: query
@@ -1872,6 +2035,53 @@ paths:
         description: UUID's van de gekoppelde plantypen.
         explode: false
         style: form
+      - in: query
+        name: startdatum
+        schema:
+          type: string
+          format: date-time
+        description: Startdatum van het plan.
+      - in: query
+        name: startdatum__gte
+        schema:
+          type: string
+          format: date-time
+        description: Startdatum van het plan.
+      - in: query
+        name: startdatum__lte
+        schema:
+          type: string
+          format: date-time
+        description: Startdatum van het plan.
+      - in: query
+        name: status
+        schema:
+          type: string
+          enum:
+          - actief
+          - afgerond
+          - geannuleerd
+        description: |-
+          Status van het plan.
+
+          * `actief` - Actief
+          * `afgerond` - Afgerond
+          * `geannuleerd` - Geannuleerd
+      - in: query
+        name: titel
+        schema:
+          type: string
+        description: Titel van het plan.
+      - in: query
+        name: titel__icontains
+        schema:
+          type: string
+        description: Titel van het plan.
+      - in: query
+        name: zaak
+        schema:
+          type: string
+        description: URN naar de bijbehorende zaak in het zaaksysteem.
       tags:
       - Plan
       security:
